<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title=""
        android:icon="@drawable/ic_more_vert"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>