<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        style="@style/MyTextInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/nickNameTIL"
        app:layout_constraintStart_toStartOf="@+id/nickNameTIL"
        app:layout_constraintTop_toBottomOf="@+id/nickNameTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/MyTextInputLayout"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/emailTIL"
        app:layout_constraintStart_toStartOf="@+id/emailTIL"
        app:layout_constraintTop_toBottomOf="@+id/emailTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTIL"
        style="@style/MyTextInputLayout"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/passwordTIL"
        app:layout_constraintStart_toStartOf="@+id/passwordTIL"
        app:layout_constraintTop_toBottomOf="@+id/passwordTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationBTN"
        style="@style/ButtonStyle"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordTIL"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordTIL"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTIL" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/haveAnAccountBTN"
        style="@style/ButtonStyle"
        android:text="@string/have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/registrationBTN"
        app:layout_constraintStart_toStartOf="@+id/registrationBTN"
        app:layout_constraintTop_toBottomOf="@+id/registrationBTN" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickNameTIL"
        style="@style/MyTextInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>