<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        style="@style/MyTextInputLayoutStyle"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:startIconDrawable="@drawable/ic_markunread">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="48dp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/MyTextInputLayoutStyle"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/emailTIL"
        app:layout_constraintStart_toStartOf="@+id/emailTIL"
        app:layout_constraintTop_toBottomOf="@+id/emailTIL"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="48dp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBTN"
        style="@style/MyButtonStyle"
        android:text="@string/login"
        app:icon="@drawable/ic_login"
        app:layout_constraintEnd_toEndOf="@+id/passwordTIL"
        app:layout_constraintStart_toStartOf="@+id/passwordTIL"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTV" />

    <TextView
        android:id="@+id/registrationTV"
        style="@style/myTextViewStyle"
        android:gravity="center"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@+id/loginBTN"
        app:layout_constraintStart_toStartOf="@+id/loginBTN"
        app:layout_constraintTop_toBottomOf="@+id/noAccountTV" />

    <TextView
        android:id="@+id/forgotPasswordTV"
        style="@style/myTextViewStyle"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        app:layout_constraintEnd_toEndOf="@+id/passwordTIL"
        app:layout_constraintTop_toBottomOf="@+id/passwordTIL" />

    <TextView
        android:id="@+id/noAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_account"
        app:layout_constraintEnd_toEndOf="@+id/loginBTN"
        app:layout_constraintStart_toStartOf="@+id/loginBTN"
        app:layout_constraintTop_toBottomOf="@+id/loginBTN" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_user_image"
        app:layout_constraintEnd_toEndOf="@+id/emailTIL"
        app:layout_constraintStart_toStartOf="@+id/emailTIL"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>